# kreds-core

./: .gitignore  COPYING  INSTALL  Makefile  Makefile.am  README.md  autogen.sh  configure.ac  libkredsconsensus.pc  libkredsconsensus.pc.in  libtool
doc/: Doxyfile  (+35 more)
src/: Makefile  Makefile.am  Makefile.bench.include  Makefile.include  Makefile.leveldb.include  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  activemasternode.cpp  activemasternode.h  addrdb.cpp  addrdb.h  addrman.cpp  addrman.h  alert.cpp  alert.h  allocators.cpp  allocators.h  amount.cpp  amount.h  arith_uint256.cpp  arith_uint256.h  base58.cpp  base58.h  bitpool.cpp  blockencodings.cpp  blockencodings.h  bloom.cpp  bloom.h  chain.cpp  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsbase.h  chainparamsseeds.h  checkpoints.cpp  checkpoints.h  checkqueue.h  clientversion.cpp  (+124 more)
src/bench/: .gitignore  Examples.cpp  base58.cpp  bench.cpp  bench.h  bench_kreds.cpp  ccoins_caching.cpp  checkblock.cpp  checkqueue.cpp  coin_selection.cpp  crypto_hash.cpp  lockedpool.cpp  mempool_eviction.cpp  perf.cpp  perf.h  rollingbloom.cpp  verify_script.cpp
src/compat/: byteswap.h  endian.h  glibc_compat.cpp  glibc_sanity.cpp  glibcxx_sanity.cpp  sanity.h  strnlen.cpp
src/config/: kreds-config.h  kreds-config.h.in  stamp-h1
src/consensus/: consensus.h  merkle.cpp  merkle.h  params.h  validation.h
src/crypto/: aes.cpp  aes.h  common.h  hmac_sha256.cpp  hmac_sha256.h  hmac_sha512.cpp  hmac_sha512.h  ripemd160.cpp  ripemd160.h  sha1.cpp  sha1.h  sha256.cpp  sha256.h  sha512.cpp  sha512.h
src/crypto/ctaes/: README.md
src/json/: json_spirit_value.h  json_spirit_writer_template.h
src/leveldb/util/: logging.cc
src/m4/: kreds_find_bdb48.m4  kreds_qt.m4  kreds_subdir_to_include.m4
src/policy/: fees.cpp  fees.h  policy.cpp  policy.h  rbf.cpp  rbf.h
src/primitives/: block.cpp  block.h  transaction.cpp  transaction.h
src/qt/: Makefile.am  addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  askpassphrasedialog.h  bantablemodel.cpp  bantablemodel.h  bip38tooldialog.cpp  bip38tooldialog.h  clientmodel.cpp  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  coincontroltreewidget.cpp  coincontroltreewidget.h  csvmodelwriter.cpp  csvmodelwriter.h  darksendconfig.cpp  editaddressdialog.cpp  editaddressdialog.h  guiconstants.h  guiutil.cpp  guiutil.h  intro.cpp  intro.h  kreds.cpp  kreds.qrc  kreds_locale.qrc  kredsaddressvalidator.cpp  kredsaddressvalidator.h  kredsamountfield.cpp  kredsamountfield.h  kredsgui.cpp  kredsgui.h  kredsstrings.cpp  kredsunits.cpp  kredsunits.h  macdockiconhandler.h  (+75 more)
src/qt/forms/: aboutdialog.ui  addressbookpage.ui  coincontroldialog.ui  darksendconfig.ui  debugwindow.ui  helpmessagedialog.ui  intro.ui  masternodelist.ui  modaloverlay.ui  optionsdialog.ui  overviewpage.ui  paperwalletdialog.ui  receivecoinsdialog.ui  rpcconsole.ui  sendcoinsdialog.ui  sendcoinsentry.ui  signverifymessagedialog.ui
src/qt/locale/: kreds_af.ts  kreds_af_ZA.ts  kreds_ar.ts  kreds_bar.ts  kreds_be_BY.ts  kreds_bg.ts  kreds_bg_BG.ts  kreds_ca.ts  kreds_ca@valencia.ts  kreds_ca_ES.ts  kreds_cmn.ts  kreds_cs.ts  kreds_cy.ts  kreds_da.ts  kreds_de.ts  kreds_el.ts  kreds_el_GR.ts  kreds_en.ts  kreds_en_GB.ts  kreds_eo.ts  kreds_es.ts  kreds_es_AR.ts  kreds_es_CL.ts  kreds_es_CO.ts  kreds_es_DO.ts  kreds_es_ES.ts  kreds_es_MX.ts  kreds_es_UY.ts  kreds_es_VE.ts  kreds_et.ts  kreds_et_EE.ts  kreds_eu_ES.ts  kreds_fa.ts  kreds_fa_IR.ts  kreds_fi.ts  kreds_fr.ts  kreds_fr_CA.ts  kreds_fr_FR.ts  kreds_gl.ts  kreds_he.ts  (+50 more)
src/qt/res/: kreds-qt-res.rc
src/qt/res/css/: kreds_main.css
src/qt/res/icons/: kreds.icns
src/qt/res/movies/: makespinner.sh
src/qt/test/: Makefile.am  compattests.cpp  compattests.h  paymentrequestdata.h  paymentservertests.cpp  paymentservertests.h  rpcnestedtests.cpp  rpcnestedtests.h  test_main.cpp  uritests.cpp  uritests.h
src/rpc/: blockchain.cpp  client.cpp  client.h  darksend.cpp  mining.cpp  misc.cpp  net.cpp  protocol.cpp  protocol.h  rawtransaction.cpp  register.h  server.cpp  server.h
src/script/: interpreter.cpp  interpreter.h  ismine.cpp  ismine.h  kredsconsensus.cpp  kredsconsensus.h  script.cpp  script.h  script_error.cpp  script_error.h  sigcache.cpp  sigcache.h  sign.cpp  sign.h  standard.cpp  standard.h
src/secp256k1/: Makefile.am  README.md  libsecp256k1.pc.in
src/secp256k1/contrib/: lax_der_parsing.h
src/secp256k1/src/: tests.c
src/support/: cleanse.cpp  cleanse.h  events.h  lockedpool.cpp  lockedpool.h
src/support/allocators/: secure.h  zeroafterfree.h
src/test/: Checkpoints_tests.cpp  DoS_tests.cpp  Makefile.am  README.md  accounting_tests.cpp  addrman_tests.cpp  alert_tests.cpp  allocator_tests.cpp  amount_tests.cpp  arith_uint256_tests.cpp  base32_tests.cpp  base58_tests.cpp  base64_tests.cpp  bctest.py  bignum_tests.cpp  bip32_tests.cpp  blockencodings_tests.cpp  bloom_tests.cpp  bswap_tests.cpp  canonical_tests.cpp  checkblock_tests.cpp  coins_tests.cpp  compress_tests.cpp  crypto_tests.cpp  cuckoocache_tests.cpp  dbwrapper_tests.cpp  getarg_tests.cpp  hash_tests.cpp  hmac_tests.cpp  key_tests.cpp  kreds-util-test.py  limitedmap_tests.cpp  main_tests.cpp  mempool_tests.cpp  merkle_tests.cpp  miner_tests.cpp  mruset_tests.cpp  multisig_tests.cpp  net_tests.cpp  netbase_tests.cpp  (+34 more)
src/test/data/: README.md  kreds-util-test.json
src/univalue/: gen.cpp  univalue.h  univalue_escapes.h
src/univalue/include/: univalue.h
src/univalue/lib/: univalue.cpp  univalue_escapes.h
src/wallet/: coincontrol.h  crypter.cpp  crypter.h  db.cpp  db.h  rpcdump.cpp  rpcwallet.cpp  rpcwallet.h  wallet.cpp  wallet.h  wallet_ismine.cpp  wallet_ismine.h  walletdb.cpp  walletdb.h
src/wallet/test/: accounting_tests.cpp  crypto_tests.cpp  wallet_test_fixture.cpp  wallet_test_fixture.h  wallet_tests.cpp
src/zmq/: zmqabstractnotifier.cpp  zmqabstractnotifier.h  zmqconfig.h  zmqnotificationinterface.cpp  zmqnotificationinterface.h  zmqpublishnotifier.cpp  zmqpublishnotifier.h
(+248 files in other folders)
